--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
+  <h1>DALER</h1>
+  <p>Welcome to my website bitch !</p>
 
 </body>
 
